# scribble

./: CMakeLists.txt  README.md
data/: noteview.css
src/: Config.vala  MainWindow.vala  Scribble.vala
src/Widgets/: ContentView.vala  NoteView.vala  NotesList.vala  test  test.vala
